# trust-registry-build-pipeline

./: .env.example  .env.vta.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SETUP_COMMAND_REFERENCES.md  VTA_SETUP.md  audit.toml  deny.toml
.github/workflows/: checks.yaml  release.yaml
.scripts/: build-and-upload.sh
sample-data/: data.csv
test-client/: Cargo.toml  README.md
test-client/conf/: user_config.json
test-client/src/: admin_operations.rs  main.rs
test-client/src/common/: didcomm.rs
test-client/src/sender/: send_request.rs
test-trust-registry/: Cargo.toml  README.md
test-trust-registry/src/: lib.rs
test-trust-registry/tests/: mediator.rs  smoke.rs
testing/: .env.test.example  README.md  run_tests.sh
trql-client/: Cargo.toml
trql-client/src/: client.rs  didcomm.rs  discovery.rs  error.rs  https.rs  lib.rs  pending.rs  transport.rs  tsp.rs
trql-client/tests/: https_binding.rs
trqp/: Cargo.toml
trqp-client/: Cargo.toml
trust-registry/: Cargo.toml
trust-registry/src/: health.rs  lib.rs  server.rs
trust-registry/src/capabilities/: git_trust.rs  mod.rs
trust-registry/src/configs/: didcomm.rs  mod.rs  secret_store.rs  storage.rs  vta.rs
trust-registry/src/configs/loaders/: aws_parameter_store.rs  aws_secrets.rs
trust-registry/src/dedup/: mod.rs
trust-registry/src/didcomm/: did_document.rs  error.rs  mod.rs  problem_report.rs  transport.rs
trust-registry/src/didcomm/handlers/: build.rs  mod.rs
trust-registry/src/didcomm/handlers/admin/: mod.rs
trust-registry/src/didcomm/handlers/problem_report/: mod.rs
trust-registry/src/didcomm/handlers/trqp/: mod.rs
trust-registry/src/didcomm/handlers/trust_tasks/: mod.rs
trust-registry/src/didcomm/listener/: build_listener.rs  mediator_functions.rs  mod.rs  start_listener.rs
trust-registry/src/domain/: key.rs  mod.rs
trust-registry/src/http/handlers/: mod.rs
trust-registry/src/http/handlers/trust_tasks/: mod.rs
trust-registry/src/storage/: factory.rs  repository.rs
trust-registry/src/storage/adapters/: csv_file_storage.rs  ddb_storage.rs  fjall_storage.rs  local_storage.rs  mod.rs  redis_storage.rs
trust-registry/src/trust_tasks/: mod.rs  payloads.rs  proof.rs  router.rs
trust-registry/src/tsp/: mod.rs
trust-registry/tests/: didcomm_integration_test.rs  http_integration_test.rs  redis_integration_test.rs
