[workspace]
members = ["test-client", "trust-registry", "trql-client", "trqp"]
resolver = "3"

[workspace.package]
version = '0.1.0'
edition = "2024"
publish = true
rust-version = "1.88.0"
description = "Trust Registry"
readme = "README.md"
license = "Apache-2.0"
keywords = ["ssi", "affinidi", "trqp", "trql", "trust-registry"]
repository = "https://github.com/affinidi/affinidi-trust-registry-rs"
homepage = "https://affinidi.com/"

[workspace.dependencies]

affinidi-tdk = "0.3"
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.4.0"
dotenvy = "0.15.7"
axum = "0.8.7"
futures = "0.3"
tokio = { version = "1.48", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
  "env-filter",
] }
tempfile = "3.23"
serde = "1.0.228"
serde_derive = { version = "1.0" }
serde_json = { version = "1.0" }
sha256 = "1.6"
once_cell = "1.21"
axum-server = { version = "0.7", default-features = true }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
uuid = { version = "1.19", features = ["v4"] }
aws-types = { version = "1.3" }
aws-config = { version = "1.8" }
aws-sdk-dynamodb = { version = "1.100" }
aws-sdk-ssm = { version = "1.100" }
aws-sdk-secretsmanager = { version = "1.95" }
serde_dynamo = { version = "4.3", features = ["aws-sdk-dynamodb+1"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Test dependencies
reqwest = { version = "0.12", features = ["json"] }
serial_test = "3.2.0"
tower = { version = "0.5", features = ["util"] }
