[workspace]
members = ["test-client", "trust-registry", "trql-client", "trqp"]
resolver = "3"

[workspace.package]
version = '0.7.0'
edition = "2024"
publish = true
rust-version = "1.95.0"
description = "Trust Registry"
readme = "README.md"
license = "Apache-2.0"
keywords = ["ssi", "affinidi", "trqp", "trql", "trust-registry"]
repository = "https://github.com/affinidi/affinidi-trust-registry-rs"
homepage = "https://affinidi.com/"

[workspace.dependencies]

affinidi-tdk = "0.8"
affinidi-messaging-sdk = "0.18"
trust-tasks-rs = "0.2.13"
trust-tasks-proof = "0.2"
vti-secrets = { version = "0.1", default-features = false }
fjall = "3"
vta-sdk = { version = "0.18", default-features = false }
trust-tasks-https = { version = "0.2", default-features = false }
trust-tasks-tsp = "0.2"
trust-tasks-didcomm = "0.2"
anyhow = "1.0"
async-trait = "0.1.89"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.4.0"
dotenvy = "0.15.7"
axum = "0.8.7"
futures = "0.3"
tokio = { version = "1.48", features = ["full"] }
tokio-util = "0.7"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
  "env-filter",
] }
tempfile = "3.23"
serde = "1.0.228"
thiserror = "2.0"
serde_derive = { version = "1.0" }
serde_json = { version = "1.0" }
sha256 = "1.6"
once_cell = "1.21"
axum-server = { version = "0.8", default-features = true }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
uuid = { version = "1.19", features = ["v4"] }
aws-types = { version = "1.3" }
aws-config = { version = "1.8" }
aws-sdk-dynamodb = { version = "1.104" }
aws-sdk-ssm = { version = "1.103" }
aws-sdk-secretsmanager = { version = "1.99" }
serde_dynamo = { version = "4.3", features = ["aws-sdk-dynamodb+1"] }
redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager"] }

# Test dependencies
reqwest = { version = "0.13", features = ["json"] }
serial_test = "3.2.0"
tower = { version = "0.5", features = ["util"] }

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
