[package]
name = "test-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
publish = false

[dependencies]
affinidi-tdk.workspace = true

async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
futures.workspace = true
once_cell.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
sha256.workspace = true

axum-server.workspace = true
tower-http.workspace = true

uuid.workspace = true
