[package]
name = "test-trust-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Embedded Trust Registry fixture for integration tests — spawn() an in-process server on an ephemeral port."
readme = "README.md"
publish = false

[features]
default = []
# Wire the DIDComm Trust Task listener against an affinidi-messaging-test-mediator.
mediator = ["dep:affinidi-messaging-test-mediator", "dep:affinidi-tdk"]
# Additionally start (and exercise) the TSP Trust Task receive loop.
tsp = ["mediator", "trust-registry/tsp", "affinidi-messaging-test-mediator/tsp"]

[dependencies]
trust-registry = { path = "../trust-registry", version = "0.8" }

tokio.workspace = true
tokio-util.workspace = true

affinidi-messaging-test-mediator = { version = "0.2", optional = true }
affinidi-tdk = { workspace = true, optional = true }

[dev-dependencies]
reqwest.workspace = true
serde_json.workspace = true
# Client side of the routed Trust Task round-trip (mediator/tsp tests).
affinidi-tdk.workspace = true
affinidi-messaging-sdk.workspace = true
trust-tasks-rs.workspace = true
trust-tasks-didcomm.workspace = true
trust-tasks-tsp.workspace = true
chrono.workspace = true
uuid.workspace = true

[lints]
workspace = true
