[package]
name = "trql-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

publish = true

[dependencies]
