[package]
name = "trust-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
publish = true

[dependencies]
axum.workspace = true
affinidi-tdk.workspace = true
trust-tasks-rs.workspace = true
trust-tasks-https.workspace = true
trust-tasks-didcomm.workspace = true
async-trait.workspace = true
futures.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
csv.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http = { workspace = true, features = ["cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
sha256.workspace = true
aws-types.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-ssm.workspace = true
aws-sdk-secretsmanager.workspace = true
serde_dynamo.workspace = true
uuid.workspace = true
redis.workspace = true
thiserror.workspace = true
reqwest.workspace = true

didwebvh-rs = { version = "0.1", optional = true }
trust-tasks-tsp = { workspace = true, optional = true }
# Direct optional dep solely to enable the SDK's `tsp` feature (atm.tsp()) on the
# shared affinidi-messaging-sdk instance; affinidi-tdk/tsp only pulls affinidi-tsp.
affinidi-messaging-sdk = { workspace = true, optional = true }
url = "2.5"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
urlencoding = "2.1.3"

[dev-dependencies]
tempfile.workspace = true
serial_test.workspace = true
tower.workspace = true

[[bin]]
name = "trust-registry"
path = "src/main.rs"

[[bin]]
name = "generate-secrets"
path = "bin/generate_secrets.rs"
required-features = ["dev-tools"]

[[bin]]
name = "setup-trust-registry"
path = "bin/setup_trust_registry.rs"
required-features = ["dev-tools"]

[features]
default = []
dev-tools = ["didwebvh-rs"]
# Trust Spanning Protocol transport binding. Off by default (affinidi-tsp is a
# moving 0.x dependency); pulls trust-tasks-tsp and enables affinidi-tdk's tsp
# feature (affinidi-tsp + the SDK TspOps accessor).
tsp = [
    "dep:trust-tasks-tsp",
    "dep:affinidi-messaging-sdk",
    "affinidi-tdk/tsp",
    "affinidi-messaging-sdk/tsp",
]

[lints]
workspace = true
