[package]
name = "trust-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
publish = true

[dependencies]
axum.workspace = true
affinidi-tdk.workspace = true
trust-tasks-rs.workspace = true
trust-tasks-https.workspace = true
trust-tasks-didcomm.workspace = true
async-trait.workspace = true
futures.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
csv.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http = { workspace = true, features = ["cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
sha256.workspace = true
aws-types.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-ssm.workspace = true
aws-sdk-secretsmanager.workspace = true
serde_dynamo.workspace = true
uuid.workspace = true
redis.workspace = true
thiserror.workspace = true
reqwest.workspace = true

didwebvh-rs = { version = "0.1", optional = true }
trust-tasks-tsp = { workspace = true, optional = true }
# Direct optional dep solely to enable the SDK's `tsp` feature (atm.tsp()) on the
# shared affinidi-messaging-sdk instance; affinidi-tdk/tsp only pulls affinidi-tsp.
affinidi-messaging-sdk = { workspace = true, optional = true }
# Pluggable secret-store backends for the TR identity (profile bundle). Backends
# are enabled via the `secrets-*` features below, mirroring vti-secrets.
vti-secrets = { workspace = true, default-features = false }
fjall = { workspace = true, optional = true }
vta-sdk = { workspace = true, optional = true, features = ["integration"] }
url = "2.5"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
urlencoding = "2.1.3"

[dev-dependencies]
tempfile.workspace = true
serial_test.workspace = true
tower.workspace = true

[[bin]]
name = "trust-registry"
path = "src/main.rs"

[[bin]]
name = "generate-secrets"
path = "bin/generate_secrets.rs"
required-features = ["dev-tools"]

[[bin]]
name = "setup-trust-registry"
path = "bin/setup_trust_registry.rs"
required-features = ["dev-tools"]

[features]
default = ["secrets-config"]
dev-tools = ["didwebvh-rs"]
# Trust Spanning Protocol transport binding. Off by default (affinidi-tsp is a
# moving 0.x dependency); pulls trust-tasks-tsp and enables affinidi-tdk's tsp
# feature (affinidi-tsp + the SDK TspOps accessor).
tsp = [
    "dep:trust-tasks-tsp",
    "dep:affinidi-messaging-sdk",
    "affinidi-tdk/tsp",
    "affinidi-messaging-sdk/tsp",
]

# Secret-store backends for the Trust Registry identity, forwarded to vti-secrets.
# `secrets-config` (config-inline + plaintext file) has no extra dependencies and
# is on by default; cloud/keyring backends are opt-in to keep the default build
# lean, and `secrets-all` turns everything on.
secrets-config = ["vti-secrets/config-seed"]
# Embedded fjall LSM storage backend for trust records.
storage-fjall = ["dep:fjall"]
# VTA integration: fetch the TR DID + keys from a Verifiable Trust Agent at startup.
vta = ["dep:vta-sdk"]
secrets-aws = ["vti-secrets/aws-secrets"]
secrets-gcp = ["vti-secrets/gcp-secrets"]
secrets-azure = ["vti-secrets/azure-secrets"]
secrets-vault = ["vti-secrets/vault-secrets"]
secrets-k8s = ["vti-secrets/k8s-secrets"]
secrets-keyring = ["vti-secrets/keyring"]
secrets-all = [
    "secrets-config",
    "secrets-aws",
    "secrets-gcp",
    "secrets-azure",
    "secrets-vault",
    "secrets-k8s",
    "secrets-keyring",
]

[lints]
workspace = true
